[package]
name = "retainer"
version = "0.2.2" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Minimal async cache in Rust with support for key expirations "
repository = "https://github.com/whitfin/retainer"
keywords = ["async", "futures", "caching", "expiration", "ttl"]
categories = ["algorithms", "asynchronous", "caching", "data-structures"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"
rand = "0.8"
async-lock = "2.4"
async-timer = "0.7"

[dev-dependencies]
smol = "1.2"
tokio = { version = "1.12", features = ["full"] }
async-std = { version = "1.10", features = ["attributes"] }
simple_logger = "1.13"
