[package]
name = "retainer"
version = "0.2.2" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Minimal async cache in Rust with support for key expirations "
repository = "https://github.com/whitfin/retainer"
keywords = ["async", "futures", "caching", "expiration", "ttl"]
categories = ["algorithms", "asynchronous", "caching", "data-structures"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.14"
rand = "0.8.4"
async-lock = "2.4.0"
async-timer = "0.7.4"

[dev-dependencies]
smol = "1.2.5"
tokio = { version = "1.14.0", features = ["full"] }
async-std = { version = "1.10.0", features = ["attributes"] }
simple_logger = "1.13.0"
