[package]
name = "retainer"
version = "0.4.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Minimal async cache in Rust with support for key expirations "
repository = "https://github.com/whitfin/retainer"
keywords = ["async", "futures", "caching", "expiration", "ttl"]
categories = ["algorithms", "asynchronous", "caching", "data-structures"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"
rand = "0.9"
async-lock = "3.4"
async-io = "2.4"
futures-lite = "2.6"

[dev-dependencies]
smol = "2.0"
tokio = { version = "1.45", features = ["full"] }
async-std = { version = "1.13", features = ["attributes"] }
simple_logger = "5.0"
